[metadata]
name = AnalystBox
description = Mobikit AnalystBox
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developer
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Database
    Topic :: Software Development :: Libraries

[options]
packages = find:
package_dir = = src
python_requires = >= 3.7

[options.packages.find]
where = src